--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,14 @@
 {
-  "name": "<TBD>",
-  "compatibility_date": "<TBD>",
-  "pages_build_output_dir": ".svelte-kit/cloudflare"
+  "name": "Circle",
+  "pages_build_output_dir": ".svelte-kit/cloudflare",
+  "compatibility_date": "2025-03-06",
+  "compatibility_flags": [
+    "nodejs_compat"
+  ]
+  // "kv_namespaces": [
+  //   {
+  //     "binding": "KV",
+  //     "id": "<NAMESPACE_ID>"
+  //   }
+  // ]
 }
