--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "Circle",
+  "name": "circle",
   "pages_build_output_dir": ".svelte-kit/cloudflare",
   "compatibility_date": "2025-03-06",
   "compatibility_flags": [
